# edi

data/themes/: meson.build  white.edc
data/themes/colorschemes/: black.edc
src/lib/: edi_build_provider_go.c  edi_build_provider_make.c  edi_exe.c  edi_exe.h  edi_process.c  edi_process.h
